--- a/TasteBuddiesClient/src/app/common/nav-bar/nav-bar.component.html
+++ b/TasteBuddiesClient/src/app/common/nav-bar/nav-bar.component.html
@@ -1,5 +1,10 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
+    
+    <a class="navbar-brand" href="/">
+      <img src="assets/TasteBuddies-Under-Logo-Transparent.png" alt="Logo" class="logo-img">
+    </a>
+    
     <ul class="navbar-nav">
       <a class="navbar-brand" href="/">Home</a>
     </ul>
