Replaced 'Home' button with  properly sized Transparent background logo as the home button in the nav bar.

--- a/TasteBuddiesClient/src/app/common/nav-bar/nav-bar.component.html
+++ b/TasteBuddiesClient/src/app/common/nav-bar/nav-bar.component.html
@@ -2,12 +2,10 @@
   <div class="container-fluid">
     
     <a class="navbar-brand" href="/">
-      <img src="assets/TasteBuddies-Under-Logo-Transparent.png" alt="Logo" class="logo-img">
+      <img src="assets/TasteBuddies-Transparent-Small (500 x 290 px).png" alt="Logo" class="logo-img">
     </a>
     
-    <ul class="navbar-nav">
-      <a class="navbar-brand" href="/">Home</a>
-    </ul>
+    
 
 
     <ul class="navbar-nav ms-auto">
