--- a/TasteBuddiesClient/src/app/common/nav-bar/nav-bar.component.css
+++ b/TasteBuddiesClient/src/app/common/nav-bar/nav-bar.component.css
@@ -61,10 +61,10 @@ ul.nav-pills a.nav-link:hover {
 }
 
 
+/* Was throwing a problem for empty rule set so I commented it out */
+/* ul.nav-pills a.nav-link {
 
-ul.nav-pills a.nav-link {
-
-}
+} */
 
 .nav-pills {
   --bs-nav-pills-border-radius: 0.375rem;
@@ -78,6 +78,6 @@ ul.nav-pills a.nav-link {
 }
 
 .logo-img {
-    max-width: 100px;
+    max-width: 200px;
     margin-right: 5px;
 }
