Replaced navbar logo with horizontal logo and formatted size.

--- a/TasteBuddiesClient/src/app/common/nav-bar/nav-bar.component.html
+++ b/TasteBuddiesClient/src/app/common/nav-bar/nav-bar.component.html
@@ -2,7 +2,7 @@
   <div class="container-fluid">
     
     <a class="navbar-brand" href="/">
-      <img src="assets/TasteBuddies-Transparent-Small (500 x 290 px).png" alt="Logo" class="logo-img">
+      <img src="assets/tb-logo-hz-transparent.png" alt="Logo" class="logo-img">
     </a>
     
     
