Created Basic Account Info Card with Username and email

--- a/TasteBuddiesClient/src/app/account/account.component.html
+++ b/TasteBuddiesClient/src/app/account/account.component.html
@@ -1,1 +1,14 @@
-<p>account works!</p>
+
+<div class="card m-auto p-4 mb-3" id="account-container">
+    
+        <div class="form-floating mb-3">
+            <h3>Account Info</h3>
+            <p><strong>Username:</strong> {{ user.displayName}}</p>
+            <p><strong>Email:</strong> {{ user.email}}</p>
+        </div>
+    
+        <!-- Display Name -->
+        <!-- Email Address -->
+        <!-- Future Updates, Add Friends, Friends List, Change or Upload Prof Pic/Avatar, Top liked Restaurants, Cuisine Type Preferences, Dietery Restrictions -->
+    
+</div>
