--- a/TasteBuddiesClient/src/app/events/event-home/event-home.component.html
+++ b/TasteBuddiesClient/src/app/events/event-home/event-home.component.html
@@ -1,11 +1,12 @@
 <div class="container">
+  <!-- Start Matching Card -->
   <div class="card custom-card p-3">
 
     <a class="col card p-2 m-3 event-card" id="event-page" routerLink="/event-page">
       <h3 class="mx-auto"> Start Matching </h3>
     </a>
     
-    
+    <!-- Current Events Card -->
     <div 
     class="col card p-2 m-3 event-card"
     id="upcomming-events-card">
@@ -13,21 +14,23 @@
 
       <ul *ngIf="upcommingEvents.length > 0; else noUpcommingEvents">
         <li  *ngFor="let event of upcommingEvents">
-          <a class="link" routerLink="/event/{{event.id}}">{{event.entryCode}}</a>
+          <a class="link" routerLink="/event/{{event.id}}">{{event.entryCode}} - {{event.mealTime | date: 'short'}}</a>
         </li>
       </ul>
       <ng-template #noUpcommingEvents>
         <p class="m-auto text-secondary"></p>
       </ng-template>
     </div>
+
+    <!-- Past Events Card -->
     <div 
     class="col card p-2 m-3 event-card"
     id="previous-events-card">
 
-      <h3 class="mx-auto"> Previously Matched </h3>
+      <h3 class="mx-auto"> Past Events </h3>
       <ul *ngIf="pastEvents.length > 0; else noPastEvents" class="event-list">
         <li *ngFor="let event of pastEvents">
-          <a class="link" routerLink="./{{event.id}}" class="event-link">{{event.entryCode}}</a>
+          <a class="link" routerLink="./{{event.id}}" class="event-link">{{event.entryCode}} - {{event.mealTime | date: 'short'}}</a>
         </li>
       </ul>
       <ng-template #noPastEvents>
