Added Event Name to the Event Creation Form

--- a/TasteBuddiesClient/src/app/events/event-form/event-form.component.html
+++ b/TasteBuddiesClient/src/app/events/event-form/event-form.component.html
@@ -17,6 +17,10 @@
                     <label class="form-label" for="searchRadius">Search radius</label>
                     <input class="form-control" type="number" id="searchRadius" name="searchRadius" placeholder="Radius in miles" [(ngModel)]="newEvent.searchRadius">
                 </div>
+                <div class="mb-3">
+                    <label class="form-label" for="eventName">Event Name</label>
+                    <input class="form-control" type="text" id="eventName" name="eventName" placeholder="Name" [(ngModel)]="newEvent.eventName">
+                </div>
             </div>
             <div class="col card p-2 m-3 card-4">
                 <h4 class="mx-auto">When</h4>
