--- a/TasteBuddiesClient/src/app/events/event-form/event-form.component.html
+++ b/TasteBuddiesClient/src/app/events/event-form/event-form.component.html
@@ -11,7 +11,7 @@
                 <h4 class="mx-auto">Where</h4>
                 <div class="mb-3">
                     <label class="form-label" for="location">Search area</label>
-                    <input class="form-control" type="text" id="location" name="location" placeholder="Zip code" [(ngModel)]="newEvent.location">
+                    <input class="form-control" type="text" id="location" name="location" placeholder="Enter a Location, Place, or City" [(ngModel)]="newEvent.location">
                 </div>
                 <div class="row">
                     <!-- Search Radius Form -->
