--- a/TasteBuddiesClient/src/app/friends/friendship/friendship.component.html
+++ b/TasteBuddiesClient/src/app/friends/friendship/friendship.component.html
@@ -8,20 +8,23 @@
           </div>
           <div class="card-body">
             <!-- Search Form -->
-            <form>
+            <form (ngSubmit)="onSubmit()">
               <div class="form-group">
-                <input type="text" class="form-control" placeholder="Search by Display Name">
+                <input type="text" class="form-control" id="searchQuery" name="searchQuery" placeholder="Search by Display Name" [(ngModel)]="searchQuery">
               </div>
-              <!-- Search Results -->
-              <ul class="list-group">
-                <li class="list-group-item">
-                  User 1
-                  <button class="btn btn-primary float-right">Send Request</button>
+              <button type="submit" class="btn btn-primary">Search</button>
+            </form>
+
+            <!-- Search Results -->
+              <ul class="list-group" *ngIf="searchResults.length > 0">
+                <li class="list-group-item" *ngFor="let user of searchResults">
+                    <!-- Display User Information Here -->
+                    <h5 class="mb-1">{{ user.displayName }}</h5>
+                  <button class="btn btn-primary float-right" (click)="sendFriendRequest(user.id)">Send Request</button>
                   <!-- Or: <button class="btn btn-danger float-right">Remove</button> -->
                 </li>
                 <!-- More search results here... -->
-              </ul>
-            </form>
+              </ul> 
           </div>
         </div>
       </div>
